# dotfiles

./: .ansible-lint-ignore.txt  .ansible-lint.yaml  .editorconfig  .gitattributes  .gitignore  .gitignore_global  .gitmodules  .p10k.zsh  .pre-commit-config.yaml  .yamllint.yaml  .zshrc  Makefile  README.md  TODO.md  ansible.cfg  bootstrap.sh  determine_environment.sh  generate_and_copy_ssh_key.sh  install.sh  inventory.yml  istat_menus.ismp  local_bootstrap.sh  mac_bootstrap.sh  minion  nas_bootstrap.sh  playbook_nas_bootstrap.yml  pyproject.toml  run.py
.claude/: CLAUDE.md  settings.json
.claude/plans/: 01-inventory-submodule-resolution.md  02-unified-bootstrap-script.md  04-bootstrap-security-hardening.md  05-repo-integration-strategy.md  06-precommit-code-quality.md  2026-03-29-nas-docker-deploy-pipeline.md  2026-03-29-tailscale-setup.md  README.md
.claude/plans/01-21-2026-dotfiles-improvement-plan/: 03-docker-security-env-vars.md  07-role-documentation-dependencies.md
.claude/specs/: 2026-03-29-nas-docker-deploy-pipeline-design.md  2026-03-29-tailscale-setup-design.md
.config/: .yamllint.yaml  istat_menus.ismp
.github/workflows/: deploy.yml  leaks.yml  lint.yml
archived_linux/: .linuxrc  bootstrap_home_server.sh  setup_preferences.sh
archived_linux/.config/kinto/: user_config.json
archived_linux/mqtt-bridge/: config.yml
docs/: RUN_PY_REFERENCE.md
hammerspoon/: init.lua
inventory/: inventory.yml
inventory/group_vars/all/: vault.yml
inventory/host_vars/nas/: vars.yml  vault.yml
iterm2/: com.googlecode.iterm2.plist
linux/: .linuxrc  bootstrap_home_server.sh  docker-compose.yml  setup_preferences.sh
linux/.config/kinto/: user_config.json
linux/mqtt-bridge/: config.yml
mac/: Brewfile  install_mac.sh  setup_preferences.sh
mac/hammerspoon/: init.lua
mac/iterm2/: com.googlecode.iterm2.plist
personal/: .gitconfig  .personalrc  README.md
playbooks/: README.md  local_bootstrap.yml  mac_bootstrap.yml  nas_bootstrap.yml  test.yml
roles/: README.md  requirements.yml
roles/brew/: README.md
roles/brew/defaults/: main.yml
roles/brew/files/: install_homebrew.sh
roles/brew/tasks/: main.yml
roles/debian/: README.md
roles/debian/defaults/: main.yml
roles/debian/tasks/: main.yml
roles/docker/: README.md
roles/docker/defaults/: main.yml
roles/docker/files/: Caddyfile  docker-compose.yml
roles/docker/tasks/: main.yml
roles/docker/templates/: Caddyfile.j2  env.j2  mqtt_bridge_config.yml.j2
roles/git/: README.md
roles/git/defaults/: main.yml
roles/git/files/: gitconfig  gitignore_global
roles/git/tasks/: main.yml
roles/git/templates/: gitconfig.j2  pre-commit.j2
roles/glance/: README.md
roles/glance/tasks/: main.yml
roles/hammerspoon/: README.md
roles/hammerspoon/defaults/: main.yml
roles/hammerspoon/files/: init.lua
roles/hammerspoon/tasks/: main.yml
roles/iterm/: README.md
roles/iterm/files/: com.googlecode.iterm2.plist
roles/iterm/tasks/: main.yml
roles/link_dotfile/: README.md
roles/macos/: README.md
roles/macos_dock/: README.md
roles/macos_settings/: README.md
roles/python/: README.md
roles/samba/: README.md
roles/ssh/: README.md
roles/ssh/tasks/: main.yml
roles/tailscale/: README.md
roles/zfs/: README.md
roles/zsh/: README.md
scripts/: deploy.sh  deploy_configs.sh  determine_environment.sh  generate_and_copy_ssh_key.sh
scripts/env/: loadenv.py  python_diagnostic.py  venvshell.py
scripts/install/: README.md  install_hatch.py  install_uv.py
scripts/installers/: README.md  install_hatch.py  install_uv.py
services/: compose.base.yml
services/autoplex/: compose.yml
services/caddy/: compose.yml
services/flaresolverr/: compose.yml
services/glance/: compose.yml
services/homeassistant/: compose.yml
services/pihole/: compose.yml
services/plex/: compose.yml
services/prowlarr/: compose.yml
services/radarr/: compose.yml
services/sonarr/: compose.yml
services/transmission/: compose.yml
states/: top.sls  work_bootstrap.sls
states/macos/: init.sls  istat_menus.ismp
states/personal/: init.sls
states/universal/: init.sls
ubuntu/: .ubunturc  bootstrap_home_server.sh  bootstrap_home_server2.sh  bootstrap_home_server_old.sh  bootstrap_utils.py  docker-compose.yml  install_ubuntu.sh  setup_preferences.sh
(+88 files in other folders)
