####################
# Project metadata #
####################
[project]
name        = "connor-mason-dotfiles"
version     = "0.0.1"
description = "Connor's dotfiles"

# Project requirements
# ====================
requires-python = ">= 3.10"
dependencies    = [
    "typing-extensions",
]

# Project URLs
# ============
[project.urls]
Homepage   = "https://github.com/connormason/dotclaude"
Repository = "https://github.com/connormason/dotclaude"
Source     = "https://github.com/connormason/dotclaude"

# Project dependency groups
# =========================
[dependency-groups]
dev = [
    {include-group = "lint"},
]
lint = [
    "interrogate >= 1.7.0",
    "ruff >= 0.15.8",
    "mypy >= 1.19.1",
    "pre-commit",
]


# ####################
# Tool configuration #
# ####################

# `codespell` configuration
[tool.codespell]
count             = true
summary           = true
skip              = "smb.conf.j2"
ignore-words-list = [
    "hass",
    "iterm",
]


# `interrogate` configuration
# ===========================
[tool.interrogate]
style                       = "sphinx"
fail-under                  = 70
ignore-init-method          = false
ignore-init-module          = false
ignore-magic                = true
ignore-module               = true
ignore-nested-functions     = true
ignore-nested-classes       = false
ignore-overloaded-functions = true
ignore-private              = true
ignore-property-decorators  = false
ignore-semiprivate          = true
ignore-setters              = true
exclude = [
    ".tmp/",
    "build/",
    "docs/",
    "tests/",
]


# `mypy` configuration
# ====================
[tool.mypy]
disallow_untyped_defs = true
exclude_gitignore     = true
warn_unused_configs   = true

[[tool.mypy.overrides]]
module        = ["services.homeassistant.config.*"]
ignore_errors = true


# `pytest` configuration
# ======================
[tool.pytest.ini_options]
testpaths = ["tests"]


# `ruff` configuration
# ====================
[tool.ruff]
line-length    = 120
indent-width   = 4
target-version = "py39"
extend-exclude = [
    "docs/",
    "services/homeassistant/config/custom_components/",
]

[tool.ruff.lint]
typing-extensions = true
typing-modules    = ["typing",  "types",  "typing_extensions"]

extend-select = [
    "ANN",      # flake8-annotations
    "C4",       # flake8-comprehensions
    "COM",      # flake8-commas
    "EXE",      # flake8-executable
    "FA",       # flake8-future-imports
    "I",        # isort
    "ICN",      # flake8-import-convetions
    "INP",      # flake8-no-pep420
    "ISC",      # flake8-implicit-str-concat
    "LOG",      # flake8-logging
    "PGH",      # pygrep-hooks
    "PT",       # flake8-pytest-style
    "PTH",      # flake8-use-pathlib
    "Q",        # flake8-quotes
    "RSE",      # flake8-raise
    "RUF",      # ruff
    "TC",       # flake8-type-checking
    "TID",      # flake8-tidy-imports
    "UP",       # pyupgrade
    "W",        # pycodestyle warnings
]
ignore = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "C408",     # Unnecessary {kind}() call (rewrite as a literal)
    "COM812",   # Trailing comma missing
    "PT011",    # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
    "PT012",    # pytest.raises() block should contain a single simple statement
    "PT017",    # Found assertion on exception {name} in except block, use pytest.raises() instead
    "RUF022",   # `__all__` is not sorted
]

[tool.ruff.lint.per-file-ignores]
"scripts/env/venvshell.py" = ["RUF001"]       # String contains ambiguous {}. Did you mean {}?

[tool.ruff.lint.isort]
force-single-line = true
required-imports  = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-type-checking]
exempt-modules                 = ["typing", "typing_extensions"]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style           = "single"
indent-style          = "space"
docstring-code-format = true
exclude               = [
    ".gitignore",
]
